app/assets/stylesheets/application.scss
@import "materialize";
// @import "materialize/extras/nouislider";
@import "https://fonts.googleapis.com/icon?family=Material+Icons";
@import "https://fonts.googleapis.com/css?family=Fredericka+the+Great";

.image-splash {
  padding: 40px;
  height: 100%;
  width: 100%;
  vertical-align: bottom;
  min-height: 700px;
  background-size: cover;
  background-position: top;
  background-image: url("https://www.homeadvisor.com/images/consumer/hhi/hero-photos/city/SanFrancisco.jpg");
}

.splash-login-container {
  text-align: center;
  z-index: 1000;
  margin: auto;
}

.login-container {
  position: relative;
  width: 30%;
  text-align: center;
  left: 34%;
  top: 150px;
}

.splash-text {
  position: relative;
  bottom: 60px;
}

.delete-button {
  background-color: red;
}

.new-post {
  margin-top: 15px;
}

.post-container {
  text-align: center;
}

.flash-msg {
  text-align: center;
  position: relative;
  right: 5%;
  color: black;
}

.post-index {
  width: 70%;
  position: relative;
  left: 15%;
}

.post-home {
  width: 70%;
  position: relative;
  left: 15%;
}

.manip-buttons {
  float: left;
  position: relative;
  bottom: 12px;
}

.post-content {
}

.back-button {
}

.media-body {
  // border: 1px solid black;
  word-wrap: break-word;
  position: relative;
  left: 25%;
  width: 50%;
}

.post-title {
  position: relative;
  right: 39.5%;
  top: 15px;
}

